# math2d

./: Cargo.toml  LICENSE
src/: arc_segment.rs  bezier_segment.rs  color.rs  ellipse.rs  lib.rs  matrix3x2f.rs  point2f.rs  point2i.rs  point2u.rs  quad_bezier_segment.rs  rectf.rs  recti.rs  rectu.rs  rounded_rect.rs  sizef.rs  sizeu.rs  thicknessf.rs  triangle.rs  vector2f.rs  vector2i.rs
src/color/: trie.rs
tests/: matrix_decomposition.rs
